--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2637,7 +2637,7 @@
     }
 }
 .attachments {
-    ul { list-style-type:none; margin:0; }
+    ul { list-style-type:none; margin:0; margin-left:18px; }
     i { float:left; margin-right:5px; }
 }
 
